[package]
name = "phoenix-v1"
version = "0.2.4"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "=0.0.12"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [ "no-entrypoint" ] } 
solana-client = "2.1.13"
solana-program = "2.1.13"
borsh = "1.5.5"
bytemuck = "1.22.0"
lib-sokoban = "=0.3.0" 
num_enum = "0.5.7"
itertools = "=0.10.5"
thiserror = "1.0.69"
ellipsis-macros = "0.3.0" 
solana-security-txt = "1.1.1"
static_assertions = "=1.1.0"

[dev-dependencies]
rand = "0.7.3"
tokio = { version = "1.8.4", features = ["full"] }
solana-sdk = "2.1.13"